vddk: Extend -D vddk.stats=1 to show number of calls and bytes transferred
The new output looks like this:

nbdkit: debug: VDDK function stats (-D vddk.stats=1):
nbdkit: debug: VixDiskLib_...                        µs calls           bytes
nbdkit: debug:   Exit                           1000854     1
nbdkit: debug:   InitEx                           79304     1
nbdkit: debug:   Flush                            13577     1
nbdkit: debug:   Write                            12534    21        10485760
nbdkit: debug:   Open                              4753     3
nbdkit: debug:   Read                               966    20         5242880
nbdkit: debug:   Close                              574     3
nbdkit: debug:   QueryAllocatedBlocks               116     4
nbdkit: debug:   ConnectEx                          103     3
nbdkit: debug:   Disconnect                          88     3
nbdkit: debug:   GetTransportMode                    68     3
nbdkit: debug:   GetInfo                             46     3
nbdkit: debug:   FreeConnectParams                   36     3
nbdkit: debug:   FreeInfo                            36     3
nbdkit: debug:   FreeBlockList                       22     4
nbdkit: debug:   AllocateConnectParams               22     3
(cherry picked from commit 5c80f0d290db45a679d55baf37ff39bacb8ce7ec)

--- a/plugins/vddk/nbdkit-vddk-plugin.pod
+++ b/plugins/vddk/nbdkit-vddk-plugin.pod
@@ -517,8 +517,7 @@ Suppress debugging of datapath calls (C<Read> and C<Write>).
 
 =item B<-D vddk.stats=1>
 
-When the plugin exits print some statistics about the amount of time
-spent waiting on each VDDK call.
+When the plugin exits print some statistics about each VDDK call.
 
 =back
 
