vddk: Include VDDK major library version in --dump-plugin output
Although it doesn't seem to be possible to get the precise VDDK
version, With a relatively simple change we can at least return the
VDDK major version.  Currently this can be 5, 6 or 7.

(cherry picked from commit 8700649d147948897f3b97810a1dff37924bdd6e)

--- a/plugins/vddk/nbdkit-vddk-plugin.pod
+++ b/plugins/vddk/nbdkit-vddk-plugin.pod
@@ -422,6 +422,10 @@ at runtime.
 If this is printed then the C<nfchostport=PORT> parameter is supported
 by this build.
 
+=item C<vddk_library_version=...>
+
+The VDDK major library version: 5, 6, 7, ...
+
 =item C<vddk_dll=...>
 
 Prints the full path to the VDDK shared library.  Since this requires
