vddk: Only print vddk_library_version when we managed to load the library
Because --dump-plugin calls load_library (false) it won't fail if we
didn't manage to load the library.  This results in library_version
being 0, which we printed incorrectly.

Resolve this problem by not printing the vddk_library_version entry in
this case.

Fixes: commit 8700649d147948897f3b97810a1dff37924bdd6e
(cherry picked from commit a3fba12c3e9c2113009f556360ae0bd04c45f6bb)

--- a/plugins/vddk/nbdkit-vddk-plugin.pod
+++ b/plugins/vddk/nbdkit-vddk-plugin.pod
@@ -425,6 +425,7 @@ by this build.
 =item C<vddk_library_version=...>
 
 The VDDK major library version: 5, 6, 7, ...
+If this is omitted it means the library could not be loaded.
 
 =item C<vddk_dll=...>
 
