vddk: Implement parallel thread model
Since VDDK 6.0, asynchronous read and write operations are available.
This commit makes use of these, allowing us to use the parallel thread
model for increased performance.

Note that at least VDDK 6.5 is required because VDDK 6.0 had a
different and incompatible signature for VixDiskLibCompletionCB.

Also note at least vSphere 6.7 is required for asynch calls to make
any performance difference.  In older versions they work
synchronously.

In the parallel thread model, nbdkit will be calling us in parallel
from multiple nbdkit threads.  VDDK does not allow multiple threads to
simultaneously call VDDK operations on the same handle.  So we create
a background thread per handle (== connection).

Only the background thread makes VDDK calls[1].  The background thread
handles a mix of synchronous (like extents, flush) and asynchronous
(like read, write) operations, but all from one thread.

Parallel nbdkit threads issue commands to the background thread
associated with each handle, and wait until they are retired.

[1] All VDDK calls except for connecting and disconnecting which for
different reasons are protected by a global lock, so I did not need to
change those.

(cherry picked from commit 1eecf15fc3d8ea253ccec4f5883fdbb9aa6f8c2b)

--- a/plugins/vddk/nbdkit-vddk-plugin.pod
+++ b/plugins/vddk/nbdkit-vddk-plugin.pod
@@ -523,6 +523,14 @@ read bandwidth to the VMware server.
 
 Same as above, but for writing and flushing writes.
 
+=item C<ReadAsync>
+
+=item C<WriteAsync>
+
+Same as above, but for asynchronous read and write calls introduced in
+nbdkit 1.30.  Unfortunately at the moment the amount of time spent in
+these calls is not accounted for correctly.
+
 =item C<QueryAllocatedBlocks>
 
 This call is used to query information about the sparseness of the
@@ -580,7 +588,8 @@ Debug extents returned by C<QueryAllocatedBlocks>.
 
 =item B<-D vddk.datapath=0>
 
-Suppress debugging of datapath calls (C<Read> and C<Write>).
+Suppress debugging of datapath calls (C<Read>, C<ReadAsync>, C<Write>
+and C<WriteAsync>).
 
 =item B<-D vddk.stats=1>
 
