common/utils/test-vector.c: Add vector benchmarks
The generic vector reallocs on every append. Add benchmarks to measure
the cost with uint32 vector (used for copying extents) and the effect of
reserving space upfront.

The tests show that realloc is pretty efficient, but calling reserve
before the appends speeds the appends up significantly.

    NBDKIT_BENCH=1 ./test-vector
    bench_reserve: 1000000 appends in 0.004503 s
    bench_append: 1000000 appends in 0.014986 s

The new benchmarks do not run by default to avoid trouble in CI on
overloaded machines or under qemu emulation.

A new target added to run all benchmaks:

    make bench

Ported from libnbd:
- commit dc9ae0174ab1384081a57a8d54b10f8147ea6430
- commit f6c06a3b4d87fe976a96ea04f8da1f22b2531dbd

(cherry picked from commit a227af7921c9a51c4f1ab699a3b9f06a9a645126)

--- a/README
+++ b/README
@@ -274,6 +274,13 @@ nbdkit-vddk-plugin against the library like this:
 
     make check-vddk vddkdir=vmware-vix-disklib-distrib
 
+Running the benchmarks
+----------------------
+
+To run benchmarks:
+
+    make bench
+
 DOWNLOAD TARBALLS
 =================
 
