ocaml: Replace "noalloc" with [@@noalloc] annotation
This requires OCaml >= 4.03 (released April 2016).  The previous
minimum version was 4.02.2.

(cherry picked from commit d15dd73845065cc9ca04aa785e2be994f76bf832)

--- a/plugins/ocaml/nbdkit-ocaml-plugin.pod
+++ b/plugins/ocaml/nbdkit-ocaml-plugin.pod
@@ -11,10 +11,7 @@ nbdkit-ocaml-plugin - writing nbdkit plugins in OCaml
 =head1 DESCRIPTION
 
 This manual page describes how to write nbdkit plugins in natively
-compiled OCaml code.
-
-Note this requires OCaml E<ge> 4.02.2, which has support for shared
-libraries.  See L<http://caml.inria.fr/mantis/view.php?id=6693>
+compiled OCaml code.  This requires OCaml E<ge> 4.03.
 
 =head1 WRITING AN OCAML NBDKIT PLUGIN
 
